infra/applications/monolith/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: default
spec:
  selector:
    component: core-deployment
  ports:
    - name: 8080tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
